--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -434,87 +434,87 @@
     </string-array>
 
     <string-array name="day_choices">
-        <item>اختر اليوم</item>
-        <item>١</item>
-        <item>٢</item>
-        <item>٣</item>
-        <item>٤</item>
-        <item>٥</item>
-        <item>٦</item>
-        <item>٧</item>
-        <item>٨</item>
-        <item>٩</item>
-        <item>١٠</item>
-        <item>١١</item>
-        <item>١٢</item>
-        <item>١٣</item>
-        <item>١٤</item>
-        <item>١٥</item>
-        <item>١٦</item>
-        <item>١٧</item>
-        <item>١٨</item>
-        <item>١٩</item>
-        <item>٢٠</item>
-        <item>٢١</item>
-        <item>٢٢</item>
-        <item>٢٣</item>
-        <item>٢٤</item>
-        <item>٢٥</item>
-        <item>٢٦</item>
-        <item>٢٧</item>
-        <item>٢٨</item>
-        <item>٢٩</item>
-        <item>٣٠</item>
-        <item>٣١</item>
+        <item>Select Day</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
     </string-array>
 
     <string-array name="month_choices">
-        <item>اختر الشهر</item>
-        <item>١</item>
-        <item>٢</item>
-        <item>٣</item>
-        <item>٤</item>
-        <item>٥</item>
-        <item>٦</item>
-        <item>٧</item>
-        <item>٨</item>
-        <item>٩</item>
-        <item>١٠</item>
-        <item>١١</item>
-        <item>١٢</item>
+        <item>Select Month</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
     </string-array>
 
     <string-array name="year_choice_d">
-        <item>اختر السنة</item>
-        <item>٢٠٢٤</item>
+        <item>Select Year</item>
+        <item>2024</item>
     </string-array>
 
     <string-array name="hour_choices">
-        <item>اختر الساعة</item>
-        <item>٠٠</item>
-        <item>٠١</item>
-        <item>٠٢</item>
-        <item>٠٣</item>
-        <item>٠٤</item>
-        <item>٠٥</item>
-        <item>٠٦</item>
-        <item>٠٧</item>
-        <item>٠٨</item>
-        <item>٠٩</item>
-        <item>١٠</item>
-        <item>١١</item>
-        <item>١٢</item>
-        <item>١٣</item>
-        <item>١٤</item>
-        <item>١٥</item>
-        <item>١٦</item>
-        <item>١٧</item>
-        <item>١٨</item>
-        <item>١٩</item>
-        <item>٢٠</item>
-        <item>٢١</item>
-        <item>٢٢</item>
-        <item>٢٣</item>
+        <item>Select Hour</item>
+        <item>00</item>
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
     </string-array>
 
     <string-array name="categories_choices_combined">
@@ -599,90 +599,6 @@
         <item>2022-٢٠٢٢</item>
         <item>2023-٢٠٢٣</item>
         <item>2024-٢٠٢٤</item>
-    </string-array>
-
-    <string-array name="day_choices_combined">
-        <item>Select Day-اختر اليوم</item>
-        <item>1-١</item>
-        <item>2-٢</item>
-        <item>3-٣</item>
-        <item>4-٤</item>
-        <item>5-٥</item>
-        <item>6-٦</item>
-        <item>7-٧</item>
-        <item>8-٨</item>
-        <item>9-٩</item>
-        <item>10-١٠</item>
-        <item>11-١١</item>
-        <item>12-١٢</item>
-        <item>13-١٣</item>
-        <item>14-١٤</item>
-        <item>15-١٥</item>
-        <item>16-١٦</item>
-        <item>17-١٧</item>
-        <item>18-١٨</item>
-        <item>19-١٩</item>
-        <item>20-٢٠</item>
-        <item>21-٢١</item>
-        <item>22-٢٢</item>
-        <item>23-٢٣</item>
-        <item>24-٢٤</item>
-        <item>25-٢٥</item>
-        <item>26-٢٦</item>
-        <item>27-٢٧</item>
-        <item>28-٢٨</item>
-        <item>29-٢٩</item>
-        <item>30-٣٠</item>
-        <item>31-٣١</item>
-    </string-array>
-
-    <string-array name="month_choices_combined">
-        <item>Select Month-اختر الشهر</item>
-        <item>1-١</item>
-        <item>2-٢</item>
-        <item>3-٣</item>
-        <item>4-٤</item>
-        <item>5-٥</item>
-        <item>6-٦</item>
-        <item>7-٧</item>
-        <item>8-٨</item>
-        <item>9-٩</item>
-        <item>10-١٠</item>
-        <item>11-١١</item>
-        <item>12-١٢</item>
-    </string-array>
-
-    <string-array name="year_choice_d_combined">
-        <item>Select Year-اختر السنة</item>
-        <item>2024-٢٠٢٤</item>
-    </string-array>
-
-    <string-array name="hour_choices_combined">
-        <item>Select Hour-اختر الساعة</item>
-        <item>00-٠٠</item>
-        <item>01-٠١</item>
-        <item>02-٠٢</item>
-        <item>03-٠٣</item>
-        <item>04-٠٤</item>
-        <item>05-٠٥</item>
-        <item>06-٠٦</item>
-        <item>07-٠٧</item>
-        <item>08-٠٨</item>
-        <item>09-٠٩</item>
-        <item>10-١٠</item>
-        <item>11-١١</item>
-        <item>12-١٢</item>
-        <item>13-١٣</item>
-        <item>14-١٤</item>
-        <item>15-١٥</item>
-        <item>16-١٦</item>
-        <item>17-١٧</item>
-        <item>18-١٨</item>
-        <item>19-١٩</item>
-        <item>20-٢٠</item>
-        <item>21-٢١</item>
-        <item>22-٢٢</item>
-        <item>23-٢٣</item>
     </string-array>
 
 </resources>
